--- a/css/styles.css
+++ b/css/styles.css
@@ -7,34 +7,42 @@
     --darwhit-color: #F4F4FD;
     --gray-color: #8e8f99;
     --trans: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-body 
-{
+}
+
+body {
     font-family: 'Roboto', sans-serif;
     color: var(--text-color);
     background-color: var(--whitty-color);
 }
+
 .link {
-        text-decoration: none;
-    }
-p, h1,h2,h3 {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
+    text-decoration: none;
+}
+
+p,
+h1,
+h2,
+h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 ul {
     list-style-type: none;
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
-   }
-   .container {
+}
+
+.container {
     width: 100%;
     max-width: 1158px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
     /* outline: 2px solid yellow; */
-   }
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -47,13 +55,16 @@ ul {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
 img {
     display: block;
     max-width: 100%;
 }
+
 .list {
     text-decoration: none;
-    }
+}
+
 .title {
     font-weight: 500;
     font-size: 20px;
@@ -61,13 +72,15 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--title-color);
-    }
+}
+
 .text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--text-color);
-         }
+}
+
 /*!------------------ HEADER ---------------------------*/
 .header {
     background-color: var(--whitty-color);
@@ -96,21 +109,25 @@ img {
 .header-menu {
     display: flex;
     gap: 40px;
-    
+
 }
+
 .header-adrs {
     display: flex;
     gap: 40px;
-    }
-.div-header {
-display: flex;
 }
+
+.div-header {
+    display: flex;
+}
+
 .header-nav {
     display: flex;
     align-items: center;
 }
+
 .logo {
-    font-family: 'Raleway',sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -121,8 +138,9 @@ display: flex;
 }
 
 .logo-part {
-color: var(--title-color);
+    color: var(--title-color);
 }
+
 .link-nav {
     font-weight: 500;
     line-height: 1.50;
@@ -133,19 +151,22 @@ color: var(--title-color);
     padding-bottom: 24px;
     transition: color var(--trans);
 }
+
 .inn {
     color: var(--active-color);
-    position: relative;}
+    position: relative;
+}
 
 .link-nav:active,
 .link-nav:hover,
 .link-nav:focus {
-     color: var(--active-color);
+    color: var(--active-color);
 }
+
 .adrs {
     font-style: normal;
     margin-left: auto;
-    }
+}
 
 .link-adrs {
     font-style: normal;
@@ -158,6 +179,7 @@ color: var(--title-color);
     transition: color var(--trans);
 
 }
+
 .link-adrs:active,
 .link-adrs:hover,
 .link-adrs:focus {
@@ -169,7 +191,7 @@ color: var(--title-color);
     background-color: var(--title-color);
     padding-top: 188px;
     padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)),url(../images/hero-bg.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -180,9 +202,9 @@ color: var(--title-color);
 
 
 }
-.div-hero {
-    
-}
+
+.div-hero {}
+
 .hero-title {
     font-weight: 700;
     font-size: 56px;
@@ -190,10 +212,10 @@ color: var(--title-color);
     text-align: center;
     letter-spacing: 0.02em;
     Color: var(--whitty-color);
-    margin-right :auto;
+    margin-right: auto;
     margin-left: auto;
     margin-bottom: 48px;
-    max-width: 496px;   
+    max-width: 496px;
 }
 
 .hero-btn {
@@ -215,8 +237,9 @@ color: var(--title-color);
     height: 56px;
     border: none;
     transition: background-color var(--trans);
-    
-}   
+
+}
+
 .hero-btn:focus,
 .hero-btn:hover {
     background-color: var(--active-color);
@@ -228,35 +251,31 @@ color: var(--title-color);
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.adv-div {
-    
-    
-    
-}
-.adv-title {
-    
-}
+
+.adv-div {}
+
+.adv-title {}
 
 .adv-div-icon {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 264px;
-height: 112px;
-background-color: var(--darwhit-color);
-border-radius: 4px;
-margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    background-color: var(--darwhit-color);
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
-.adv-icon-svg {
 
-}
+.adv-icon-svg {}
+
 .adv-list {
     display: flex;
-     gap: 24px;
+    gap: 24px;
 }
 
 .adv-item {
-  width: calc((100% - 3*24px) / 4);
+    width: calc((100% - 3*24px) / 4);
 }
 
 .adv-item-title {
@@ -265,10 +284,7 @@ margin-bottom: 8px;
 }
 
 
-.adv-item-text {
-
-
-}
+.adv-item-text {}
 
 /*!------------------What are we doing---------------------  */
 .wawd {
@@ -290,7 +306,7 @@ margin-bottom: 8px;
 .wawd-list {
     display: flex;
     gap: 24px;
-    
+
 }
 
 .wawd-item {
@@ -299,13 +315,13 @@ margin-bottom: 8px;
 }
 
 /*!------------------Our Team-------------------------------  */
- .team {
+.team {
     background-color: var(--darwhit-color);
     padding-bottom: 120px;
     padding-top: 120px;
- }
+}
 
- .team-title {
+.team-title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -314,47 +330,49 @@ margin-bottom: 8px;
     text-transform: capitalize;
     color: #2E2F42;
     margin-bottom: 72px;
-    
- }
 
- .team-list {
+}
+
+.team-list {
     display: flex;
     gap: 24px;
 
- }
+}
 
- .team-item {
+.team-item {
     width: calc((100% - 72px) / 4);
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    
- }
 
- .team-item-img {}
+}
 
- .team-item-title {
+.team-item-img {}
+
+.team-item-title {
     margin-bottom: 8px;
- }
- .team-soc-icon 
- {
+}
+
+.team-soc-icon {
     display: flex;
     gap: 24px;
     justify-content: center;
     margin-top: 8px;
-    
- }
- .team-soc {}
-   
- .team-icon-svg {
+
+}
+
+.team-soc {}
+
+.team-icon-svg {
     fill: var(--darwhit-color);
- }
- 
- .team-soc-item {
+}
+
+.team-soc-item {
     width: 40px;
     height: 40px;
- }
- .team-soc-link {
+}
+
+.team-soc-link {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -364,34 +382,34 @@ margin-bottom: 8px;
     border-radius: 50%;
     background-color: var(--simple-color);
     transition: background-color var(--trans)
- }
+}
 
- .team-soc-link:hover,
- .team-soc-link:focus {
+.team-soc-link:hover,
+.team-soc-link:focus {
     background-color: var(--active-color);
- }
- .team-item-text {
+}
+
+.team-item-text {
     text-align: center;
-    }
+}
 
 .div-team-name {
     padding: 32px 0;
- }
+}
 
 
- /*!------------------FOOTER-------------------------------  */
+/*!------------------FOOTER-------------------------------  */
 
- .footer {
+.footer {
     background-color: #2E2F42;
     padding-top: 100px;
     padding-bottom: 100px;
-    }
-.div-foot-content {
+}
 
-}
-.div-foot-soc {
-    
-}
+.div-foot-content {}
+
+.div-foot-soc {}
+
 .foot-tittle {
     color: var(--whitty-color);
     font-weight: 500;
@@ -415,49 +433,127 @@ margin-bottom: 8px;
     width: 40px;
     height: 40px;
 }
+
 .foot-soc-link {
     width: 100%;
     height: 100%;
 }
+
 .foot-soc-link:hover,
 .foot-soc-link:focus {
     background-color: #31d0aa;
 }
+
 .div-foot {
     display: flex;
     align-items: baseline;
 }
+
 .foot-soc-icon {
     display: flex;
     gap: 16px;
-    }
-.div-foot-icon {
-    }
-.div-foot-soc {
-    }
-    .div-foot-content {
-        margin-right: 120px;
-    }
-    .foot-icon-svg {
-        fill: var(--darwhit-color);
-    }
+}
+
+.div-foot-icon {}
+
+.div-foot-soc {}
+
+.div-foot-content {
+    margin-right: 120px;
+}
+
+.foot-icon-svg {
+    fill: var(--darwhit-color);
+}
+
 .foot {
     display: inline-block;
     margin-bottom: 16px;
 }
+
 .footer-text {
     color: var(--darwhit-color);
-     max-width: 264px;
+    max-width: 264px;
 }
+
 .foot-logo-part {
-      color: var(--darwhit-color);
-    }
+    color: var(--darwhit-color);
+}
+
+.foot-sub-div {
+    margin-left: 80px;
+
+}
+
+.foot-sub-tittle {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--whitty-color);
+    margin-bottom: 16px;
+
+}
+
+.foot-sub-form {
+    display: flex;
+}
+
+.foot-mail-input {
+    min-width: 264px;
+    height: 40px;
+    border: 1px solid #FFFFFF;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+    color: var(--whitty-color);
+    padding-left: 16px;
+    margin-right: 24px;
+}
+
+.foot-mail-input::placeholder {
+    font-size: 12px;
+    line-height: 2;
+    color: var(--whitty-color);
+
+}
+
+.foot-sub-svg {
+    fill: var(--whitty-color);
+}
+
+.foot-sub-btn {
+    cursor: pointer;
+    min-width: 165px;
+    height: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--whitty-color);
+    background-color: var(--simple-color);
+    border-radius: 4px;
+    border: none;
+    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    transition: background-color var(--trans);
+
+}
+
+.foot-sub-btn:hover,
+.foot-sub-btn:focus {
+    background-color: var(--active-color);
+}
+
 /*!------------------CUSTOMERS-------------------------------  */
 .custom {
     padding-top: 120px;
     padding-bottom: 120px;
-    
+
 }
+
 .custom-tittle {
     font-weight: 700;
     font-size: 36px;
@@ -465,12 +561,14 @@ margin-bottom: 8px;
     text-transform: capitalize;
     margin-bottom: 72px;
 }
+
 .custom-icon-list {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 24px;
 }
+
 .custom-link {
     display: flex;
     justify-content: center;
@@ -481,12 +579,11 @@ margin-bottom: 8px;
     width: 100%;
     height: 100%;
     transition: border-color var(--trans),
-    color var(--trans);
-    }
-
-.custom-div {
-    
+        color var(--trans);
 }
+
+.custom-div {}
+
 .custom-icon-item {
     width: calc((100% - 120px) / 6);
     height: 88px;
@@ -496,11 +593,13 @@ margin-bottom: 8px;
     fill: currentColor;
     transition: fill var(--trans);
 }
+
 .custom-link:hover,
 .custom-link:focus {
     color: var(--active-color);
     border-color: var(--active-color);
 }
+
 .custom-link:hover .custom-icon,
 .custom-link:hover .custom-icon {
     fill: var(--active-color);
@@ -514,30 +613,27 @@ margin-bottom: 8px;
     padding-bottom: 120px;
     background-color: var(--whitty-color);
 }
-        
+
 .filter-title {}
-        
+
 .filter-list {
-    
+
     display: flex;
     justify-content: center;
     gap: 24px;
     margin-bottom: 72px;
     align-items: flex-start;
-    
+
 }
-        
-.filter-list-item {
-    
-    
-   
+
+.filter-list-item {}
+
+.div-filter {
+
+    background-color: var(--whitty-color);
+
 }
-  .div-filter {
-   
-   background-color: var(--whitty-color);
-  
-  }
-    
+
 .filter-item-btn {
     font-family: inherit;
     font-style: normal;
@@ -551,9 +647,9 @@ margin-bottom: 8px;
     padding: 12px 24px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
-    transition: color var(--trans),background-color var(--trans),
-    border-color var(--trans),box-shadow var(--trans);
-    
+    transition: color var(--trans), background-color var(--trans),
+        border-color var(--trans), box-shadow var(--trans);
+
 }
 
 .filter-item-btn:hover,
@@ -564,6 +660,7 @@ margin-bottom: 8px;
     border: 1px solid transparent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .filter-card-list {
     display: flex;
     flex-wrap: wrap;
@@ -571,16 +668,16 @@ margin-bottom: 8px;
 }
 
 .card-item-link:hover,
-.card-item-link:focus { 
+.card-item-link:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-item {
     width: calc((100% - 2*24px)/3);
-    transition: color var(--trans),background-color var(--trans),
-    border-color var(--trans),
-    box-shadow var(--trans);
-   }
+    transition: color var(--trans), background-color var(--trans),
+        border-color var(--trans),
+        box-shadow var(--trans);
+}
 
 .card-over-text {
     color: var(--darwhit-color);
@@ -590,23 +687,26 @@ margin-bottom: 8px;
     background-color: #4D5AE5;
     width: 100%;
     height: 100%;
-    padding: 40px 32px ;
+    padding: 40px 32px;
     transform: translateY(100%);
     transition: transform var(--trans);
-    
-    }
+
+}
+
 .card-div-over {
     position: relative;
     overflow: hidden;
-    }
+}
+
 .card-item-link:hover .card-over-text,
 .card-item-link:focus .card-over-text {
     transform: translateY(0%)
 }
-    .card-item-link {
-        display: block;
-        transition: box-shadow var(--trans);
-    }
+
+.card-item-link {
+    display: block;
+    transition: box-shadow var(--trans);
+}
 
 
 
@@ -616,17 +716,18 @@ margin-bottom: 8px;
     border-top: none;
 
 }
+
 .card-item-img {}
 
 .card-item-title {
-text-align:left ;
-margin-bottom: 8px;
-    
+    text-align: left;
+    margin-bottom: 8px;
+
 }
 
 .card-item-text {}
 
-/*!------------------OTHERS-------------------------------  */
+/*!------------------MODAL-------------------------------  */
 
 .backdrop {
     position: fixed;
@@ -636,18 +737,21 @@ margin-bottom: 8px;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity var(--trans), visibility var(--trans);
 }
+
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
     width: 408px;
     min-height: 584px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform var(--trans);
+    padding: 72px 24px 24px;
 }
+
 .modal-btn-close {
     position: absolute;
     right: 24px;
@@ -655,7 +759,7 @@ margin-bottom: 8px;
     width: 24px;
     height: 24px;
     cursor: pointer;
-    background-color: #e7e9fc;  
+    background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     padding: 0;
@@ -665,30 +769,182 @@ margin-bottom: 8px;
     transition: background-color var(--trans), border var(--trans);
 
 }
+
 .is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
 }
+
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0)
 }
+
 .close-svg {
     fill: var(--title-color);
     transition: fill var(--trans);
 }
+
 .modal-btn-close:focus,
 .modal-btn-close:hover {
-background-color: #404bbf;
-border: none;
+    background-color: #404bbf;
+    border: none;
 }
+
 .modal-btn-close:focus .close-svg,
 .modal-btn-close:hover .close-svg {
     fill: var(--whitty-color);
 }
 
+.modal-tittle {
+    font-weight: 500;
+    text-align: center;
+    color: var(--title-color);
+    margin-bottom: 16px;
+}
+
+.modal-form {
+    margin-bottom: 0;
+}
+
+.modal-input {
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 38px;
+    padding-right: 4px;
+    outline: transparent;
+    transition: border-color var(--trans);
+}
+
+.modal-input:focus {
+    border-color: var(--simple-color);
+}
+
+.modal-input:focus+.modal-svg {
+    fill: var(--simple-color);
+}
+
+.form-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--gray-color);
+    display: inline-block;
+    margin-bottom: 4px;
+
+}
 
 
-   
+.modal-svg {
+    position: absolute;
+    fill: var(--title-color);
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill var(--trans);
+}
 
+.input-modal-div {
+    position: relative;
 
+}
+
+.all-input-div {
+    margin-bottom: 8px;
+}
+
+.modal-send-btn {
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    margin: 24px auto 0;
+    background: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    outline: transparent;
+    color: var(--whitty-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: color var(--trans), background-color var(--trans), border-color var(--trans);
+
+}
+
+.modal-send-btn:is(:hover, focus) {
+    background-color: var(--active-color);
+}
+
+.comment {
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    height: 120px;
+    background-color: transparent;
+    outline: transparent;
+    resize: none;
+    transition: border-color var(--trans);
+    display: block;
+}
+
+.comment-input-div {
+    margin-bottom: 16px;
+}
+
+.comment:focus {
+    border-color: var(--simple-color);
+    padding: 8px 16px;
+}
+
+.comment::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.check-txt a {
+    color: var(--simple-color);
+    text-decoration: underline;
+
+}
+
+.check-txt {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: var(--gray-color);
+    display: inline-flex;
+    align-items: center;
+}
+
+.check-txt span {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    margin-right: 8px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    transition: backroun-color var(--trans), border-color var(--trans), fill var(--trans);
+
+}
+
+.check:checked+.check-txt span {
+    background-color: var(--simple-color);
+    border: none;
+    fill: var(--darwhit-color);
+}
+
+.check:focus+.check-txt {
+    border-color: var(--simple-color);
+}
+
+.check {}
