--- a/css/styles.css
+++ b/css/styles.css
@@ -539,6 +539,7 @@ img {
     min-width: 165px;
     height: 40px;
     font-weight: 500;
+    letter-spacing: 0.04em;
     font-size: 16px;
     line-height: 1.5;
     color: var(--whitty-color);
